<resources>
    <string name="app_name">BolaBoka</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_user">Create User</string>
    <string name="log_in">Login</string>
    <string name="cancel">Cancel</string>
    <string name="stats">Stats</string>
    <string name="all_time_label">All time</string>
    <string name="monthly_label">Monthly</string>
    <string name="by_workout_label">By workout</string>
    <string name="graph_data_btn">Data displayed as graphs</string>
    <string name="numeric_data_btn">Data displayed as numbers</string>
    <string name="personal_information">Personal Information</string>
    <string name="height_in_cm">Height in CM</string>
    <string name="weight_in_kg">Weight in KG</string>
    <string name="save">Save</string>
    <string name="feet_lbs"><![CDATA[Feet & Lbs]]></string>
    <string name="workouts_headline">Workouts</string>
    <string name="fab_content_desc">Add Workout</string>
    <string name="spinnerTitle">Select Workout</string>
    <string name="startWorkout">Start Workout</string>
    <string name="dialog_info">Add a Workout!</string>
    <string name="tip_add_workout">Workout Name:</string>
    <string name="tip_add_workout_tip">Description</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_reps">Reps</string>
    <string name="exercise_sets">Sets</string>
    <string name="change_header">Edit Workout</string>
    <string name="change_workoutname">Change Name</string>
    <string name="change_workoutdesc">Change Desc</string>
    <string name="nextString">next</string>
    <string name="backString">back</string>
    <string name="weightString">Weight</string>
    <string name="finishString">Finish</string>
    <string name="sign_out">Sign Out</string>
    <string name="placeholderTextForExercise">Information about the exercise</string>
    <string name="changeReps">Change Reps</string>
    <string name="changeSets">Change Sets</string>
    <string name="loggedInPlaceholder">Logged in as:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="_1_rep_max">1 rep max:</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight:</string>
    <string name="reps">Reps:</string>
    <string name="set">Set:</string>
    <string name="increase_in_strength">Increase in strength %:</string>
    <string name="velgOvelse">Select exercise:</string>
    <string name="datoFra">Selcet start date:</string>
    <string name="datoSlutt">Select end date:</string>
    <string name="ovelseHint">Benkpress</string>
    <string name="dateHint">MM-DD-YYYY</string>
    <string name="edit_workout_string">Edit Exercise</string>
    <string name="emailPlaceholder">Email:</string>
    <string name="line_2">Line 2</string>
    <string name="line_1">Line 1</string>
    <string name="todo">TODO</string>
    <string name="profilbilde">Profilbilde</string>
    <string name="logo">Logo</string>
    <string name="dialog_info_exercise">Add a Exercise!</string>


    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>