<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stats" >

    <TextView
        android:id="@+id/statPageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/stats"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/allTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statPageName"
        android:theme="@style/Theme.MaterialComponents.Light"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/Monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toStartOf="@+id/ByWorkout"
        app:layout_constraintStart_toEndOf="@+id/allTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/statPageName"
        android:theme="@style/Theme.MaterialComponents.Light"/>

    <TextView
        android:id="@+id/allTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_time_label"
        app:layout_constraintBottom_toTopOf="@+id/allTimeButton"
        app:layout_constraintEnd_toStartOf="@+id/monthlyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statPageName"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/monthlyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/monthly_label"
        app:layout_constraintBottom_toTopOf="@+id/Monthly"
        app:layout_constraintEnd_toStartOf="@+id/byWorkoutText"
        app:layout_constraintTop_toBottomOf="@+id/statPageName"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/byWorkoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/by_workout_label"
        app:layout_constraintBottom_toTopOf="@+id/ByWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statPageName"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/graphDataBtn"
        android:layout_width="246dp"
        android:layout_height="105dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/graph_data_btn"
        app:layout_constraintBottom_toTopOf="@+id/numberDataBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Monthly"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/numberDataBtn"
        android:layout_width="246dp"
        android:layout_height="105dp"
        android:layout_marginBottom="108dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/numeric_data_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/ByWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />
</androidx.constraintlayout.widget.ConstraintLayout>